# varforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: varforge_benchmarks.rs
benchmarking/design/: benchmark-plan.md  hg38-benchmarks.md
benchmarking/downstreamvc/: README.md  design.md  setup.md
benchmarking/downstreamvc/configs/: 01_snv_baseline.yaml  02_low_vaf_ctdna.yaml  03_ffpe_artefacts.yaml  04_panel_umi.yaml
benchmarking/downstreamvc/scripts/: evaluate.py  plot_vc_results.py  run_benchmark.sh
benchmarking/micro/: varforge_benchmarks.rs
benchmarking/results/tables/: coverage_scaling.csv  feature_overhead.csv  hg38_benchmarks.csv  main_scenarios.csv  output_sizes.csv  results.json  results_fresh.json  thread_scaling.csv
benchmarking/scripts/: compile_results.py  gen_refs.py  plot_results.py  run_benchmarks.sh  run_hg38_benchmarks.sh
benchmarking/scripts/configs/: 01_baseline.yaml  02_with_variants.yaml  03_high_coverage.yaml  04_very_high_coverage.yaml  05_umi_simplex.yaml  06_umi_duplex.yaml  07_cfdna.yaml  08_ffpe_artifacts.yaml  09_all_features.yaml  10_large_genome.yaml  11_panel_simulation.yaml  12_ultra_deep.yaml
benchmarking/scripts/configs_hg38/: 01_wgs_baseline.yaml  02_wgs_variants.yaml  03_panel_umi.yaml  04_twist_duplex.yaml  05_cfdna.yaml  06_ffpe_tumour.yaml  07_wgs_30x.yaml  08_panel_bed_200x.yaml  panel_chr22_1mbp.bed
docs/benchmarking/: hardware.md  methodology.md  results.md
docs/claudeguide/: release.md
docs/claudetracking/: KANBAN.md  open_questions.md
docs/claudetracking/blocked/: T049.md  T135.md  T142.md
docs/claudetracking/done/: T001.md  T002.md  T003.md  T004.md  T005.md  T006.md  T007.md  T008.md  T009.md  T010.md  T011.md  T012.md  T013.md  T014.md  T015.md  T016.md  T017.md  T018.md  T019.md  T020.md  T021.md  T022.md  T023.md  T024.md  T025.md  T026.md  T027.md  T028.md  T029.md  T030.md  T031.md  T032.md  T033.md  T034.md  T035.md  T036.md  T037.md  T038.md  T039.md  T040.md  (+109 more)
docs/claudetracking/inprogress/: T055.md  T060.md  T061.md  T064.md  T068.md  T072.md  T094.md  T095.md  T098.md  T102.md  T105.md  T151.md  T152.md  T153.md  T154.md  T155.md  T156.md
docs/claudetracking/needs-review/: NR-001-serde-yaml-migration.md  NR-002-downstream-validation-scope.md  NR-003-variant-tag-decision.md  NR-004-engine-refactor-scope.md
docs/claudetracking/overallplans/: EPIC-ADVANCED.md  EPIC-BAM-FIDELITY.md  EPIC-BATCH.md  EPIC-BUGS.md  EPIC-CFDNA-SEMANTICS.md  EPIC-CLI-ERGONOMICS.md  EPIC-CONFIG-VALIDATION.md  EPIC-CORRECTNESS.md  EPIC-COVERAGE.md  EPIC-DEAD-CODE.md  EPIC-DEPENDENCY-HYGIENE.md  EPIC-ERROR-MODEL.md  EPIC-EXAMPLES.md  EPIC-GERMLINE.md  EPIC-KAM-COMPAT.md  EPIC-LONGREAD.md  EPIC-MD-TAG.md  EPIC-MULTI-SAMPLE.md  EPIC-OUTPUT.md  EPIC-POLISH.md  EPIC-PRESETS.md  EPIC-QUALITY-MODELS.md  EPIC-REFACTOR.md  EPIC-RELEASE-GATE.md  EPIC-SIGNATURES.md  EPIC-TESTS.md  EPIC-TOOLING.md  EPIC-TRUTH-VCF.md  EPIC-TWIST-DUPLEX.md
docs/claudetracking/todo/: T053.md  T057.md  T058.md  T062.md  T063.md  T065.md  T066.md  T067.md  T069.md  T070.md  T071.md  T073.md  T075.md  T076.md  T077.md  T078.md  T079.md  T081.md  T082.md  T083.md  T084.md  T085.md  T086.md  T087.md  T088.md  T091.md  T093.md  T096.md  T097.md  T099.md  T100.md  T103.md  T104.md  T106.md  T107.md  T111.md  T112.md  T113.md  T114.md  T115.md  (+28 more)
docs/dev/: README.md  downstream-validation.md
docs/features/: bed-region-filtering.md  sequencing-technology-profiles.md  streaming-output.md  twist-duplex-benchmarking.md
docs/features/initial-requirements/: README.md  artifacts.md  cli-interface.md  core-simulation.md  io-formats.md  liquid-biopsy.md  performance.md  tumour-model.md  umi-duplex.md  variant-spike-in.md
docs/paper/: generate_figures.py  main.tex  main_2col.tex  main_2p.tex  main_big.tex  paper-intent.md  references.bib
docs/paper/sections/: 01_introduction.tex  02_background.tex  03_related_work.tex  04_method.tex  05_results.tex  06_evaluation.tex  07_discussion.tex  08_future_work.tex  09_appendix.tex  abstract.tex
docs/plan/tasks/: task-03-bam-writer.md  task-06-simulate-command.md  task-07-parallel-processing.md  task-08-structural-variants.md  task-09-copy-number-variants.md  task-11-gc-bias.md  task-13-cli-overrides-presets.md  task-15-multi-sample.md  task-17-learn-profile.md  task-20-performance.md  task-21-documentation.md  task-22-bam-editor.md
docs/planning/: README.md  roadmap-extension.md
docs/planning/tasks/: task-01-reference-loading.md  task-02-fastq-writer.md  task-04-truth-vcf-writer.md  task-05-read-generation.md  task-10-vcf-input-parsing.md  (+5 more)
docs/research/: cancer-genomics-details.md  existing-tools.md  gap-analysis.md  input-specification.md  rust-ecosystem.md  sequencing-technologies.md  technical-requirements.md  tool-comparison-2025.md
docs/reviewcycle/: review-01.md  review-02.md  review-03.md  review-04.md  review-05.md
examples/: cfdna_monitoring.yaml  custom_mutations.yaml  ffpe_artifacts.yaml  high_depth.yaml  minimal.yaml  panel_umi.yaml  subclonal.yaml  tumor_normal.yaml  twist_duplex_benchmark.yaml  twist_duplex_benchmark_targets.bed  wgs_30x.yaml
scripts/: benchmark.sh  setup_downstream.sh  task-loop.sh
src/: lib.rs  main.rs  seq_utils.rs
src/artifacts/: duplicates.rs  ffpe.rs  mod.rs
src/cli/: benchmark_suite.rs  cancer_presets.rs  edit.rs  learn_profile.rs  mod.rs  presets.rs  simulate.rs  validate.rs
src/core/: capture.rs  coverage.rs  end_motifs.rs  engine.rs  error_orchestrator.rs  error_profile.rs  fragment.rs  gc_bias.rs  mod.rs  multi_sample.rs  profile_learner.rs  quality.rs  seq_errors.rs  types.rs
src/editor/: bam_editor.rs  mod.rs  read_modifier.rs
src/io/: bam.rs  config.rs  fastq.rs  manifest.rs  mod.rs  reference.rs  truth_vcf.rs  vcf_input.rs
src/tumour/: clonal_tree.rs  mod.rs
src/umi/: barcode.rs  families.rs  mod.rs
src/variants/: cnv.rs  germline.rs  mod.rs  random_gen.rs  signatures.rs  spike_in.rs  structural.rs  sv_signatures.rs  vaf.rs
tests/: simulate_integration.rs  vaf_chi_squared.rs
(+12 files in other folders)
