[package]
name = "varforge"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Synthetic cancer sequencing test data generator"
repository = "https://github.com/varforge/varforge"
homepage = "https://github.com/varforge/varforge"
documentation = "https://docs.rs/varforge"
license = "MIT"
readme = "README.md"
keywords = ["bioinformatics", "sequencing", "cancer", "simulation", "genomics"]
categories = ["science", "command-line-utilities", "simulation"]
exclude = [
    "docs/paper/**",
    "docs/benchmarking/**",
    "docs/reviewcycle/**",
    "docs/research/**",
    "docs/plan/**",
    "benchmark_output/**",
    "scripts/**",
    ".github/**",
]

[dependencies]
# Pure Rust bioinformatics I/O (no C dependencies)
noodles-bam = "0.68"
noodles-sam = "0.65"
noodles-vcf = "0.63"
noodles-bcf = "0.59"
noodles-fasta = "0.42"
noodles-fastq = "0.14"
noodles-bed = "0.15"
noodles-bgzf = "0.33"
noodles-csi = "0.38"
noodles-core = "0.15"
noodles-tabix = "0.43"

# Fast FASTQ writing
seq_io = "0.3"

# Alignment / sequence utilities
bio = "1.6"

# RNG and distributions
rand = "0.8"
rand_distr = "0.4"
statrs = "0.17"

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"

# Compression — pure-Rust backend (miniz_oxide) avoids the libz-sys/cmake dependency
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress
indicatif = "0.17"

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "varforge_benchmarks"
path = "benchmarking/micro/varforge_benchmarks.rs"
harness = false

[profile.release]
lto = "thin"
strip = "symbols"
